--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,7 @@
 {
   "imports": {
-    "hono": "jsr:@hono/hono@^4.6.20"
+    "hono": "jsr:@hono/hono@^4.6.20",
+    "zod": "npm:zod@^3.24.1"
   },
   "tasks": {
     "start": "deno run --allow-net src/main.ts",
